[package]
name = "sng-sdwan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway SD-WAN subsystem: per-flow path selection by latency / loss / jitter score with hot-swappable policy"

[dependencies]
sng-core = { workspace = true }
sng-telemetry = { workspace = true }

tokio = { workspace = true, features = ["sync", "time"] }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "io-util", "macros"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
