[package]
name = "sng-swg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway Secure Web Gateway subsystem: URL classification, reputation, malware verdict, TLS bypass policy"

[dependencies]
sng-core = { workspace = true }
sng-policy-eval = { workspace = true }
sng-telemetry = { workspace = true }

tokio = { workspace = true, features = ["sync", "time"] }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }

url = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "io-util", "macros"] }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
