[package]
name = "sng-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway self-update engine: signed manifests + dual-bank install + health-check rollback"

[dependencies]
sng-core = { workspace = true }

tokio = { workspace = true, features = ["sync", "time"] }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "rt-multi-thread"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
rmp-serde = { workspace = true }

[lints]
workspace = true
